--- a/app/src/main/res/layout/clean_water_egg.xml
+++ b/app/src/main/res/layout/clean_water_egg.xml
@@ -10,33 +10,17 @@
         android:id="@+id/dragonName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="28dp"
+        android:layout_marginEnd="40dp"
         android:text="dragonName"
         android:textAlignment="textStart"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/number"
+        app:layout_constraintBottom_toBottomOf="@+id/dragon"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.91"
-        app:layout_constraintStart_toEndOf="@+id/number"
-        app:layout_constraintTop_toTopOf="@+id/number"
+        app:layout_constraintTop_toTopOf="@+id/dragon"
         app:layout_constraintVertical_bias="0.0" />
 
     <TextView
-        android:id="@+id/element"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textAlignment="viewEnd"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.022" />
-
-    <TextView
-        android:id="@+id/number"
+        android:id="@+id/gameTvCounter"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="288dp"
@@ -62,17 +46,29 @@
         app:layout_constraintVertical_bias="0.022" />
 
     <TextView
-        android:id="@+id/textView6"
+        android:id="@+id/dragon"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="114dp"
         android:text="-Dragon:"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/element"
-        app:layout_constraintEnd_toStartOf="@+id/dragonName"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/element"
-        app:layout_constraintTop_toTopOf="@+id/element"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintBottom_toBottomOf="@+id/gameTvCounter"
+        app:layout_constraintStart_toEndOf="@+id/gameTvCounter"
+        app:layout_constraintTop_toTopOf="@+id/gameTvCounter" />
+
+    <TextView
+        android:id="@+id/element"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="TextView"
+        android:textAlignment="viewEnd"
+        android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.022" />
 
     <ImageView
         android:id="@+id/sponge"
@@ -84,6 +80,28 @@
         app:layout_constraintHorizontal_bias="0.951"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.971" />
+        app:layout_constraintVertical_bias="1.0" />
+
+    <Button
+        android:id="@+id/game_touch_simulation_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Touch Simulate"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView7"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="64dp"
+        android:text="TextView"
+        android:textColor="@color/white"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.252"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
