--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,12 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/forest_ancient"
     tools:context=".MainActivity">
 
     <Button
         android:id="@+id/start_button"
         android:layout_width="156dp"
         android:layout_height="91dp"
+        android:background="@drawable/start"
+        android:foreground="@drawable/start"
         android:text="START"
         android:textAppearance="@style/TextAppearance.AppCompat.Display1"
         app:layout_constraintBottom_toBottomOf="parent"
