--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -2,76 +2,63 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/game_background"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/forest_ancient">
 
     <TextView
-        android:id="@+id/dragonName"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginEnd="40dp"
+        android:id="@+id/game_dragonName_tv"
+        android:layout_width="180dp"
+        android:layout_height="19dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="16dp"
         android:text="dragonName"
         android:textAlignment="textStart"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/dragon"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/dragon"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintStart_toEndOf="@+id/game_element_tv"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:id="@+id/gameTvCounter"
+        android:id="@+id/game_element_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="288dp"
-        android:text="TextView"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:text="Water-Dragon:"
+        android:textColor="@color/white"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+
+    <TextView
+        android:id="@+id/game_counter_tv"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="16dp"
+        android:text="0"
         android:textAlignment="textStart"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/counter"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/counter"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintTop_toTopOf="parent" />
+
 
     <TextView
-        android:id="@+id/counter"
+        android:id="@+id/game_counter_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="4dp"
+        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
         android:text="Counter:"
         android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.022" />
+        app:layout_constraintEnd_toStartOf="@+id/game_counter_tv"
+        app:layout_constraintTop_toTopOf="parent" />
 
-    <TextView
-        android:id="@+id/dragon"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="114dp"
-        android:text="-Dragon:"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="@+id/gameTvCounter"
-        app:layout_constraintStart_toEndOf="@+id/gameTvCounter"
-        app:layout_constraintTop_toTopOf="@+id/gameTvCounter" />
-
-    <TextView
-        android:id="@+id/element"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="TextView"
-        android:textAlignment="viewEnd"
-        android:textColor="@color/white"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.022" />
 
     <ImageView
-        android:id="@+id/sponge"
+        android:id="@+id/game_sponge"
         android:layout_width="79dp"
         android:layout_height="143dp"
         android:layout_marginEnd="16dp"
@@ -80,19 +67,19 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <TextView
-        android:id="@+id/textView7"
+        android:id="@+id/game_timer_tv"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="64dp"
-        android:text="TextView"
+        android:layout_marginBottom="24dp"
+        android:text="17:17:17"
         android:textColor="@color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.252"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
+
 
     <ImageView
-        android:id="@+id/exitDoor"
+        android:id="@+id/game_exitDoor"
         android:layout_width="56dp"
         android:layout_height="90dp"
         android:layout_marginStart="32dp"
@@ -102,7 +89,7 @@
         app:srcCompat="@drawable/exit_door" />
 
     <ImageView
-        android:id="@+id/imageView2"
+        android:id="@+id/game_egg"
         android:layout_width="412dp"
         android:layout_height="734dp"
         app:layout_constraintBottom_toBottomOf="parent"
