--- a/app/src/main/res/layout/game.xml
+++ b/app/src/main/res/layout/game.xml
@@ -57,15 +57,6 @@
         app:layout_constraintTop_toTopOf="parent" />
 
 
-    <ImageView
-        android:id="@+id/game_sponge"
-        android:layout_width="79dp"
-        android:layout_height="143dp"
-        android:layout_marginEnd="16dp"
-        android:src="@drawable/water_sponge"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
-
     <TextView
         android:id="@+id/game_timer_tv"
         android:layout_width="wrap_content"
@@ -82,24 +73,29 @@
         android:id="@+id/game_exitDoor"
         android:layout_width="56dp"
         android:layout_height="90dp"
-        android:layout_marginStart="32dp"
-        android:layout_marginBottom="24dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginBottom="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/exit_door" />
 
     <ImageView
         android:id="@+id/game_egg"
-        android:layout_width="412dp"
-        android:layout_height="734dp"
+        android:layout_width="410dp"
+        android:layout_height="732dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-
-        app:layout_constraintHorizontal_bias="1.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/select_blue" />
+        app:srcCompat="@drawable/select_blue_dirty" />
+
+    <ImageView
+        android:id="@+id/game_sponge"
+        android:layout_width="76dp"
+        android:layout_height="110dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:srcCompat="@drawable/water_sponge" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
