--- a/app/src/main/res/layout/select_dragon_egg.xml
+++ b/app/src/main/res/layout/select_dragon_egg.xml
@@ -11,12 +11,12 @@
         android:id="@+id/imageView"
         android:layout_width="223dp"
         android:layout_height="344dp"
+        android:src="@drawable/board"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.852"
-        android:src= "@drawable/board" />
+        app:layout_constraintVertical_bias="0.85" />
 
     <Button
         android:id="@+id/water_dragon"
@@ -49,34 +49,35 @@
         android:id="@+id/imageView3"
         android:layout_width="223dp"
         android:layout_height="344dp"
+        android:src="@drawable/board"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.144"
-        android:src= "@drawable/board" />
+        app:layout_constraintVertical_bias="0.144" />
 
     <ImageView
         android:id="@+id/imageView7"
         android:layout_width="144dp"
         android:layout_height="312dp"
         android:layout_marginTop="44dp"
+        android:src="@drawable/select_blue"
         app:layout_constraintEnd_toEndOf="@+id/imageView3"
         app:layout_constraintHorizontal_bias="0.493"
         app:layout_constraintStart_toStartOf="@+id/imageView3"
-        app:layout_constraintTop_toTopOf="@+id/imageView3"
-        android:src="@drawable/select_blue" />
+        app:layout_constraintTop_toTopOf="@+id/imageView3" />
 
     <ImageView
-        android:id="@+id/imageView8"
-        android:layout_width="141dp"
-        android:layout_height="219dp"
+        android:id="@+id/fire_egg"
+        android:layout_width="136dp"
+        android:layout_height="210dp"
+        android:layout_marginTop="4dp"
         app:layout_constraintBottom_toBottomOf="@+id/imageView"
         app:layout_constraintEnd_toEndOf="@+id/imageView"
-        app:layout_constraintHorizontal_bias="0.475"
+        app:layout_constraintHorizontal_bias="0.448"
         app:layout_constraintStart_toStartOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="@+id/Fire"
-        app:layout_constraintVertical_bias="0.183"
-        android:src="@drawable/select_red" />
+        app:layout_constraintVertical_bias="0.203"
+        app:srcCompat="@drawable/select_red" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
