--- a/app/src/main/res/layout/story_book.xml
+++ b/app/src/main/res/layout/story_book.xml
@@ -21,10 +21,10 @@
 
     <Button
         android:id="@+id/button"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="150dp"
+        android:layout_height="50dp"
         android:background="@android:color/transparent"
-        android:text=" Continue ->"
+        android:text="Continue ->"
         app:layout_constraintBottom_toBottomOf="@+id/imageView4"
         app:layout_constraintEnd_toEndOf="@+id/imageView4"
         app:layout_constraintHorizontal_bias="0.498"
