--- a/app/src/main/res/layout/story_book.xml
+++ b/app/src/main/res/layout/story_book.xml
@@ -24,6 +24,7 @@
         android:layout_height="215dp"
         android:layout_marginBottom="44dp"
         android:text="TextView"
+        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
         app:layout_constraintBottom_toBottomOf="@+id/imageView4"
         app:layout_constraintEnd_toEndOf="@+id/imageView4"
         app:layout_constraintHorizontal_bias="0.488"
